<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>de.tor.dswb</groupId>
    <artifactId>dsworkbench</artifactId>
    <name>DSWorkbench</name>
    <packaging>pom</packaging>
    <version>4.1</version>

    <description>
        Parent project for DS Workbench. The project contains two modules: core and plugins which are put together
        during the assembly process.
        Furthermore, all dependencies are managed by this parent project.
    </description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <release.version>${project.version}</release.version>
    </properties>

    <repositories>
        <repository>
            <id>localRepository</id>
            <url>file://${basedir}/lib/</url>
        </repository>
        <repository>
            <id>central</id>
            <url>https://repo1.maven.org/maven2</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>de.tor</groupId>
            <artifactId>help</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>2.13.3</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>2.13.3</version>
        </dependency>
        <dependency><!--dependency for log4j-->
            <groupId>xerces</groupId>
            <artifactId>xercesImpl</artifactId>
            <version>2.12.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-collections4</artifactId>
            <version>4.4</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.10</version>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-configuration2</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.7</version>
        </dependency>
        <dependency>
            <groupId>org.swinglabs.swingx</groupId>
            <artifactId>swingx-core</artifactId>
            <version>1.6.5-1</version>
        </dependency>
        <dependency>
            <groupId>org.jdom</groupId>
            <artifactId>jdom2</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>netbeans</groupId>
            <artifactId>wizard</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>php-parser</groupId>
            <artifactId>php-parser</artifactId>
            <version>0.3</version>
        </dependency>
        <dependency>
            <groupId>org.json</groupId>
            <artifactId>json</artifactId>
            <version>20200518</version>
        </dependency>
        <dependency>
            <groupId>com.sun.woodstock.dependlibs</groupId>
            <artifactId>jhall</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>flamingo</groupId>
            <artifactId>flamingo</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.pushingpixels</groupId>
            <artifactId>trident</artifactId>
            <version>1.3</version>
        </dependency>
        <dependency>
            <groupId>bislider</groupId>
            <artifactId>bislider</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>colorchooser</groupId>
            <artifactId>colorchooser</artifactId>
            <version>1.0</version>
        </dependency>
        <dependency>
            <groupId>org.jfree</groupId>
            <artifactId>jfreechart</artifactId>
            <version>1.5.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.5.1</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>2.1</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                        </manifest>
                        <manifestEntries>
                            <Implementation-Build>${release.version}</Implementation-Build>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.5</version>
                <configuration>
                    <descriptors>
                        <descriptor>src/main/assemble/distribution.xml</descriptor>
                    </descriptors>
                    <outputDirectory>release</outputDirectory>
                    <appendAssemblyId>false</appendAssemblyId>
                    <finalName>DSWorkbench-${release.version}</finalName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>appassembler-maven-plugin</artifactId>
                <version>1.8</version>
                <configuration>
                    <!-- set alternative assemble directory -->
                    <assembleDirectory>${project.build.directory}</assembleDirectory>
                    <!-- alternative name used instead of 'repo' -->
                    <repositoryName>lib</repositoryName>
                    <!-- add the root dir to the classpath which is
                    useful to find e.g. the graphics. -->
                    <configurationDirectory>.</configurationDirectory>
                    <!-- allows the project jar to be placed first in classpath.
                    This is important due to configuration files which may
                    occur more than once. -->
                    <endorsedDir>lib</endorsedDir>
                    <!--suppress MavenModelInspection -->
                    <!-- This solved my problem configuring the logback. -->
                    <extraJvmArguments>-Dlog4j.configuration=@BASEDIR@/log4j.xml -Xmx512m</extraJvmArguments>
                    <platforms>
                        <platform>windows</platform>
                        <platform>unix</platform>
                    </platforms>
                    <repositoryLayout>flat</repositoryLayout>
                    <useWildcardClassPath>true</useWildcardClassPath>
                    <programs>
                        <program>
                            <mainClass>de.tor.tribes.ui.windows.DSWorkbenchSplashScreen</mainClass>
                            <id>DSWorkbench</id>
                        </program>
                    </programs>
                </configuration>
                <executions>
                    <execution>
                        <id>package-executable</id>
                        <goals>
                            <goal>assemble</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <dependencies>
                    <dependency>
                        <groupId>com.puppycrawl.tools</groupId>
                        <artifactId>checkstyle</artifactId>
                        <version>[8.18,)</version>
                    </dependency>
                </dependencies>
                <configuration>
                    <configLocation>checkstyle.xml</configLocation>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <scm>
        <developerConnection>https://github.com/Torridity/dsworkbench.git</developerConnection>
    </scm>

    <modules>
        <module>Core</module>
        <module>ParserPlugin</module>
    </modules>
</project>
